@@ -3,6 +3,7 @@
 	- Fix to reply with SERVFAIL when the wait-limit is exceeded.
 	- Add extended dns error code for invalid query type to definition
 	  list.
+	- Fix to update openssl version in ios ci.
 
 10 October 2025: Wouter
 	- Fix #1358 Enabling FIPS in OpenSSL causes unit test to fail.
